[project]
name = "dobleshot-server"
version = "0.0.0"
dependencies = [
  "python-dotenv >= 1.2.1",
  "sqlalchemy >= 2.0.44",
  "psycopg2-binary >= 2.9.11",
  "ariadne >= 0.25",
  "starlette >= 0.52.1",
  "uvicorn >= 0.40.0",
]
readme = "README.md"

[project.optional-dependencies]
dev = ["alembic >= 1.17.2"]
